--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,10 @@ body {
 /* ---- Medial Querys -----*/
 
 @media screen and (max-width: 450px) {
+  body {
+    background: var(--paleBlue) url("./images/pattern-background-mobile.svg")
+      no-repeat;
+  }
   .container {
     width: 90vw;
   }
