--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
   /* min-width: 500px; */
   /* border: 1px solid black; */
   margin: 60px auto;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   border-radius: 20px;
 }
 
